# Image_chat

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
routes/: __init__.py  api.py  main.py
routes/api/: __init__.py  images.py  prompts.py
services/: __init__.py  config.py  image_service.py  logging_config.py  prompt_service.py  retry_utils.py
services/providers/: __init__.py  base.py  google.py  openrouter.py  tuzi.py
static/: script.js  style.css
static/css/: base.css  components.css  layout.css  modal.css  variables.css
static/js/: main.js
static/js/modules/: api.js  config.js  prompt_manager.js  state.js  ui.js  utils.js  workflow.js
static/js/modules/ui/: auto_ui.js  base.js  dom_map.js  forms.js  gallery.js
templates/: base.html  index.html
templates/partials/: _api_key.html  _edit_form.html  _generate_form.html  _modal.html  _prompt_modal.html  _results.html  _tabs.html
