[project]
name = "image-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.2",
    "google-genai>=1.53.0,<2.0.0",
    "openai>=1.108.0,<2.0.0",
    "pillow==11.3.0",
    "python-dotenv>=1.2.1",
    "requests==2.32.3",
]
